2016-01-23  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.1.0-beta1.
	* version.ac: Adapted.

2015-12-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.0.1.
	* version.ac: Adapted.

2015-12-10  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	Import gregorio-4.0.0.
	* version.ac: Adapted.

2015-10-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import gregorio-4.0.0-rc1.
	* configure.ac, version.ac: Adapted.

2015-09-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import gregorio-4.0.0-beta2.
	* Makefile.am, configure.ac, version.ac: Adapted.

	* Makefile.am, gregorio.test: Create factus.gtex and veni.gtex.

2015-08-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Import gregorio-4.0.0-beta.
