@@ -1,4 +1,4 @@
-dnl
+dnl   Copyright 2016 Karl Berry <tex-live@tug.org>
 dnl   Copyright 2015 Peter Breitenlohner <tex-live@tug.org>
 dnl
 dnl   This file is free software; the copyright holder
